# hyprmonitors

./: Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-05-29-hyprmonitor.md  2026-06-06-gui.md
docs/superpowers/specs/: 2026-05-29-hyprmonitor-design.md  2026-06-06-gui-design.md
gui/: Cargo.toml
gui/src/: app.rs  canvas.rs  inspector.rs  main.rs  save.rs  tests.rs
src/: cli.rs  config.rs  daemon.rs  hypr.rs  lib.rs  main.rs  model.rs  notify.rs  refresh.rs
src/algo/: layout.rs  mod.rs  mode.rs  primary.rs  scale.rs
tests/: plan_test.rs
tests/fixtures/: laptop_plus_external.json  single_4k_laptop.json
