[package]
name = "hyprmonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
hyprland = "0.4.0-beta.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "process"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
regex = "1"
anyhow = "1"

[lib]
name = "hyprmonitor"
path = "src/lib.rs"

[[bin]]
name = "hyprmonitor"
path = "src/main.rs"
