[package]
name = "hyprmonitor-gui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
hyprmonitor = { path = ".." }
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
